force-app/main/default/objects/Project__c/fields/Car_Park_Type_1__c.field-meta.xml
<CustomField>
    <fullName>Car_Park_Type_1__c</fullName>
    <label>Car Park Type 1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Stack</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Tandem</fullName>
            </value>
            <value>
                <fullName>2 Wheeler</fullName>
            </value>
            <value>
                <fullName>Covered</fullName>
            </value>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>2 Single</fullName>
            </value>
            <value>
                <fullName>1 Single &amp; Tandem</fullName>
            </value>
            <value>
                <fullName>2 Single &amp; Tandem</fullName>
            </value>
            <value>
                <fullName>Covered Car Park For 2 BHK</fullName>
            </value>
            <value>
                <fullName>Covered Car Park For 3 BHK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>