force-app/main/default/objects/Project__c/fields/Charge_Value_2__c.field-meta.xml
<CustomField>
    <fullName>Charge_Value_2__c</fullName>
    <label>Car Park Charge 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>