force-app/main/default/objects/Project__c/fields/Expiry_Days__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Days__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Expiry Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>