force-app/main/default/objects/Project__c/fields/Forefeiting__c.field-meta.xml
<CustomField>
    <fullName>Forefeiting__c</fullName>
    <label>Forefeiting %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>