force-app/main/default/objects/Project__c/fields/Google_Map_URL__c.field-meta.xml
<CustomField>
    <fullName>Google_Map_URL__c</fullName>
    <label>Google Map URL</label>
    <type>Url</type>
</CustomField>