force-app/main/default/objects/Project__c/fields/Group_Demands_By_Customer__c.field-meta.xml
<CustomField>
    <fullName>Group_Demands_By_Customer__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Group Demands By Customer</label>
    <type>Checkbox</type>
</CustomField>