force-app/main/default/objects/Project__c/fields/Hide_From_3rd_Party__c.field-meta.xml
<CustomField>
    <fullName>Hide_From_3rd_Party__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide From 3rd Party</label>
    <type>Checkbox</type>
</CustomField>