force-app/main/default/objects/Project__c/fields/Max_Budget__c.field-meta.xml
<CustomField>
    <fullName>Max_Budget__c</fullName>
    <label>Max Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>