force-app/main/default/objects/Project__c/fields/Min_Budget__c.field-meta.xml
<CustomField>
    <fullName>Min_Budget__c</fullName>
    <label>Min Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>