force-app/main/default/objects/Project__c/fields/NPV__c.field-meta.xml
<CustomField>
    <fullName>NPV__c</fullName>
    <label>NPV %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>