force-app/main/default/objects/Project__c/fields/Project_Availability_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Project_Availability_Pricing__c</fullName>
    <label>Project Availability &amp; Pricing</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>