force-app/main/default/objects/Project__c/fields/Project_Info_for_SMS__c.field-meta.xml
<CustomField>
    <fullName>Project_Info_for_SMS__c</fullName>
    <label>Project Info for SMS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>