force-app/main/default/objects/Project__c/fields/Project_Stage__c.field-meta.xml
<CustomField>
    <fullName>Project_Stage__c</fullName>
    <label>Project Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pre-launch</fullName>
            </value>
            <value>
                <fullName>Launch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>