force-app/main/default/objects/Project__c/fields/RDS_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>RDS_Interest_Rate__c</fullName>
    <label>Interest Rate %</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>