force-app/main/default/objects/Project__c/fields/Sales_Head_Discount__c.field-meta.xml
<CustomField>
    <fullName>Sales_Head_Discount__c</fullName>
    <label>Sales Head Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>