force-app/main/default/objects/Project__c/fields/Sales_Manager_Discount__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager_Discount__c</fullName>
    <label>Sales Manager Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>