force-app/main/default/objects/Project__c/fields/Sender_Code__c.field-meta.xml
<CustomField>
    <fullName>Sender_Code__c</fullName>
    <label>Sender Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>