force-app/main/default/objects/Project__c/fields/Senior_Manager__c.field-meta.xml
<CustomField>
    <fullName>Senior_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Senior Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>