force-app/main/default/objects/Project__c/fields/Service_Tax_Required_On_Token_Amount__c.field-meta.xml
<CustomField>
    <fullName>Service_Tax_Required_On_Token_Amount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VAT on Token Amount</label>
    <type>Checkbox</type>
</CustomField>