force-app/main/default/objects/Project__c/fields/Site_Address__c.field-meta.xml
<CustomField>
    <fullName>Site_Address__c</fullName>
    <label>Site Address</label>
    <length>150</length>
    <type>Text</type>
</CustomField>