force-app/main/default/objects/Project__c/fields/Site_Head__c.field-meta.xml
<CustomField>
    <fullName>Site_Head__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Head</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects1</relationshipName>
    <type>Lookup</type>
</CustomField>