force-app/main/default/objects/Project__c/fields/Site_Head_Discount__c.field-meta.xml
<CustomField>
    <fullName>Site_Head_Discount__c</fullName>
    <label>Site Head Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>