force-app/main/default/objects/Project__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Project_Code__c</columns>
    <columns>NPV__c</columns>
    <columns>Min_Budget__c</columns>
    <columns>Max_Budget__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>